# tau_split

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: my_benchmark.rs
data/: README.md
data/models/: stiff_cat.txt
data/test_models/: cyclic.txt  decay.txt  synthesis.txt
scripts/: convert_network_to_blsssa.py  download_data.py  run_benchmarks.py
src/: gillespie.rs  indexed_vec.rs  lib.rs  main.rs  parsers.rs  reaction.rs  reaction_graph.rs  ref_obj.rs  tau.rs  tau2.rs  utils.rs
src/fastspie3/: mod.rs  prod_events.rs  recursion.rs
src/fastspie4/: mod.rs
src/fastspie5/: mod.rs  recursion.rs  state_data.rs
src/fastspie6/: mod.rs  recursion.rs
src/tau3/: README.md  mod.rs  reaction_data.rs  state_data.rs
src/tau4/: README.md  mod.rs  reaction_data.rs  recursion.rs  state_data.rs
src/tau5/: README.md  f_reaction.rs  mod.rs  reaction_data.rs  recursion.rs  unstable_dependents.rs
src/tau6/: README.md  f_reaction.rs  listener.rs  mod.rs  reaction_data.rs  recursion.rs  state_data.rs
src/tests/: chisq.rs  mod.rs  test_networks.rs
