[package]
name = "tausplit"
version = "0.2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/ormorni/tau_split"
description = "A chemical reaction network simulator."
license = "MIT"
exclude = ["data", "scripts"]

[lib]
name = "tausplit"
path = "src/lib.rs"

[[bin]]
name = "tausplit"
path = "src/main.rs"

[dependencies]
arrayvec = "0.7.6"
bon = "3.6.4"
clap = { version = "4.5.40", features = ["derive"] }
clap-cargo = "0.16.0"
dary_heap = "0.3.7"
derive-new = "0.7.0"
itertools = "0.14.0"
kdam = "0.6.3"
nom = "8.0.0"
num-traits = "0.2.19"
ordered-float = "5.0.0"
rand = "0.9.1"
rand_distr = "0.5.1"
rustc-hash = "2.1.1"
smallvec = "1.15.1"
tinyvec = "1.9.0"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "my_benchmark"
harness = false

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = true
